# FL-heterogeneity

./: .gitignore  .python-version  README.md  pyproject.toml
configs/: class_constrained.py  fds_configs.py  fl_configs.py  metrics_configs.py  optimizer_configs.py  partitioner_configs.py  test_writer_ids_femnist.csv
heterogeneity/: config_utils.py  experiments.py  experiments_fl.py  experiments_heterogeneity.py  experiments_old.py  fds_utils.py  partitioners_utils.py
heterogeneity/fl/: data.py  early_stopping.py  fl_loop.py  fl_loop_fnc.py  metrics_aggregation.py  ml.py  ml_utils.py  model.py  pathological_partitioner.py  save_utils.py  utils.py  weights_aggregation.py
heterogeneity/metrics/: __init__.py  earths_mover_distance.py  hellinger_distance.py  kl_divergence.py  utils.py
heterogeneity/notebooks/: DatasetsOverview.ipynb  ExplorationEMD.ipynb  ExplorationHellinger.ipynb  ExplorationKLDivergence.ipynb  ExploreFEMNIST.ipynb  HeterogeneityVsTestAccLinReg.ipynb  PlotPartitioners.ipynb  TestAccToHeterogeneityECorrelation.ipynb
