[tool.poetry]
name = "fl-heterogeneity"
version = "0.1.0"
description = "Project exploring the heterogeneity problems in Federated Learning (FL)."
authors = ["Adam Narozniak <narozniak.adam4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flwr-datasets = "^0.1.0"
#flwr-datasets = { git = "https://github.com/adap/flower.git#subdirectory=datasets" }
# python -m pip install git+https://github.com/adap/flower.git#subdirectory=datasets
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
