[tool.poetry]
name = "fl-heterogeneity"
version = "0.1.0"
description = "Project exploring the heterogeneity problems in Federated Learning (FL)."
authors = ["Adam Narozniak <narozniak.adam4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flwr-datasets = "^0.3.0"
scipy = "^1.12.0"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.35.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
